<resources>
    <string name="app_name"></string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="shopping_list">Shopping List</string>
    <string name="account">Account</string>
    <string name="api_key">ApiKey</string>

    <string name="holder_text">Holder Text</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="add_to_shoppingList">Add To Shopping List</string>
    <string name="delete_from_shoppingList">Delete From Shopping List</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="app_id">Application ID: ""</string>
    <string name="app_key">Application Key: ""</string>
    <string name="set_new_key">Set App ID and App Key</string>
    <string name="set">Set</string>
    <string name="attention">Attention</string>
    <string name="current_api_key">API Key Info:</string>
    <string name="no_apikey_found">No Api Key Found</string>
</resources>