<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/input_app_id_layout"
            android:textSize="25sp"
            android:textColor="#000"
            android:text="@string/set_new_key"
            android:id="@+id/api_fragment_title"
            android:layout_marginTop="50dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/api_fragment_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/input_app_key_layout"
            android:padding="16dp"
            android:id="@+id/input_app_id_layout"
            android:layout_marginTop="30dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_app_id"
                android:textColor="#000"
                android:hint="@string/app_id"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_app_id_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/set_button"
            android:padding="16dp"
            android:id="@+id/input_app_key_layout"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_app_key"
                android:textColor="#000"
                android:hint="@string/app_key"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/set_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@+id/input_app_key_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_margin="15dp"
            />

        <TextView
            android:id="@+id/current_api_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/set_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/app_id_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            app:layout_constraintTop_toBottomOf="@id/current_api_key"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/app_key_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/holder_text"
            app:layout_constraintTop_toBottomOf="@id/app_id_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>